Refactor code: Clean duplicate code at BaseMasterDataRepository